[gd_scene load_steps=2 format=3 uid="uid://dpnb5gh6yv52q"]

[ext_resource type="Script" path="res://scripts/MainMenuController.gd" id="1"]

[node name="MainMenuRoot" type="Node2D"]
script = ExtResource("1")

[node name="Day1Button" type="Button" parent="."]
offset_top = 50.0
offset_right = 48.0
offset_bottom = 70.0
text = "Day 1"

[node name="Day2Button" type="Button" parent="."]
offset_left = 100.0
offset_top = 50.0
offset_right = 148.0
offset_bottom = 70.0
text = "Day 2"

[node name="Day3Button" type="Button" parent="."]
offset_left = 200.0
offset_top = 50.0
offset_right = 248.0
offset_bottom = 70.0
text = "Day 3"

[node name="Day4Button" type="Button" parent="."]
offset_left = 300.0
offset_top = 50.0
offset_right = 348.0
offset_bottom = 70.0
text = "Day 4"

[node name="Day5Button" type="Button" parent="."]
offset_left = 400.0
offset_top = 50.0
offset_right = 448.0
offset_bottom = 70.0
text = "Day 5 X"

[node name="Day6Button" type="Button" parent="."]
offset_top = 90.0
offset_right = 51.0
offset_bottom = 121.0
text = "Day 6"

[node name="Day7Button" type="Button" parent="."]
offset_left = 100.0
offset_top = 90.0
offset_right = 151.0
offset_bottom = 121.0
text = "Day 7"

[node name="Day8Button" type="Button" parent="."]
offset_left = 200.0
offset_top = 90.0
offset_right = 251.0
offset_bottom = 121.0
text = "Day 8"

[node name="Day9Button" type="Button" parent="."]
offset_left = 300.0
offset_top = 90.0
offset_right = 351.0
offset_bottom = 121.0
text = "Day 9"

[node name="Day10Button" type="Button" parent="."]
offset_left = 400.0
offset_top = 90.0
offset_right = 461.0
offset_bottom = 121.0
text = "Day 10"

[node name="Day11Button" type="Button" parent="."]
offset_top = 130.0
offset_right = 61.0
offset_bottom = 161.0
text = "Day 11"

[node name="3DModeButton" type="Button" parent="."]
offset_right = 12.0
offset_bottom = 20.0
text = "3D Mode"

[connection signal="pressed" from="Day1Button" to="." method="_on_Day1_Button_pressed"]
[connection signal="pressed" from="Day2Button" to="." method="_on_Day2Button_pressed"]
[connection signal="pressed" from="Day3Button" to="." method="_on_Day3Button_pressed"]
[connection signal="pressed" from="Day4Button" to="." method="_on_Day4Button_pressed"]
[connection signal="pressed" from="Day5Button" to="." method="_on_Day5Button_pressed"]
[connection signal="pressed" from="Day6Button" to="." method="_on_Day6Button_pressed"]
[connection signal="pressed" from="Day7Button" to="." method="_on_Day7Button_pressed"]
[connection signal="pressed" from="Day8Button" to="." method="_on_Day8Button_pressed"]
[connection signal="pressed" from="Day9Button" to="." method="_on_Day9Button_pressed"]
[connection signal="pressed" from="Day10Button" to="." method="_on_Day10Button_pressed"]
[connection signal="pressed" from="Day11Button" to="." method="_on_day_11_button_pressed"]
[connection signal="pressed" from="3DModeButton" to="." method="_on_3DModeButton_pressed"]
