extends Node2D

func _ready():
	pass # Replace with function body.

func _on_Day1_Button_pressed():
	get_tree().change_scene("res://scenes/Day1.tscn")

func _on_Day2Button_pressed():
	get_tree().change_scene("res://scenes/Day2.tscn")

func _on_Day3Button_pressed():
	get_tree().change_scene("res://scenes/Day3.tscn")

func _on_Day4Button_pressed():
	get_tree().change_scene("res://scenes/Day4.tscn")

func _on_3DModeButton_pressed():
	get_tree().change_scene("res://scenes/3DMode.tscn")

func _on_Day5Button_pressed():
	get_tree().change_scene("res://scenes/Day5.tscn")

func _on_Day6Button_pressed():
	get_tree().change_scene("res://scenes/Day6.tscn")

func _on_Day7Button_pressed():
	get_tree().change_scene("res://scenes/Day7.tscn")

func _on_Day8Button_pressed():
	get_tree().change_scene("res://scenes/Day8.tscn")

func _on_Day9Button_pressed():
	get_tree().change_scene("res://scenes/Day9.tscn")
